--- a/Math_Test/README
+++ b/Math_Test/README
@@ -1,5 +1,10 @@
 # Cognitive Test Code (Group 03)
 
-This repository contains code developed to run cognitive tests written as part of the BIOS0030 course.
+This repository contains code developed to run a simple arithmetic test written as part of the BIOS0030 course.
 
-There are 4 tests to complete, testing various differnet human skills.
+This test is written by Yuan Lee Student ID:22155945.
+
+Results of test will be recorded in google form: 
+https://docs.google.com/forms/d/e/1FAIpQLSeoPgA0CDrG8R55Z6bSmt5j3s0CR9kobdhmRp5mALF2mLdUsw/viewform?usp=sf_link
+
+Questions asked by the test can be altered to increase or decrease difficulty.
