--- a/Spatial_Test/SpatialTestEdited.ipynb
+++ b/Spatial_Test/SpatialTestEdited.ipynb
@@ -387,7 +387,7 @@
     "q6a = draw_cubes(cubes6, ticks=True, grid=True, view = '-yz')\n",
     "q6b = draw_cubes(cubes6, ticks=True, grid=True, view = 'yz')\n",
     "q6c = draw_cubes(cubes6, ticks=True, grid=True, view = 'xz')\n",
-    "q6d = draw_cubes(correctcubes6, ticks=True, grid=True, view = 'xy')\n",
+    "q6d = draw_cubes(correctcubes6, ticks=True, grid=True, view = '-yz')\n",
     "\n",
     "q7a = draw_cubes(cubes7, ticks=True, grid=True, view = 'yz')\n",
     "q7b = draw_cubes(cubes7, ticks=True, grid=True, view = 'xy')\n",
