Update Group 3 Spatial Test.ipynb

--- a/Spatial_Test/Group 3 Spatial Test.ipynb
+++ b/Spatial_Test/Group 3 Spatial Test.ipynb
@@ -10,7 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "%matplotlib widget\n",
+    "%matplotlib inline\n",
     "\n",
     "from IPython.display import display, Image, clear_output, HTML\n",
     "import time\n",
