--- a/README
+++ b/README
@@ -2,4 +2,5 @@
 
 This repository contains code developed to run cognitive tests written as part of the BIOS0030 course.
 
-There are 4 tests to complete, testing various differnet human skills.
+There are 4 tests to complete, testing various differnet human skills, please navigate to each test folder where instructions will be 
+given on how to operate and conduct the tests.
