--- a/Math_Test/Math Test.ipynb
+++ b/Math_Test/Math Test.ipynb
@@ -110,13 +110,16 @@
     "        end_time=time.time()\n",
     "    global time_taken\n",
     "    time_taken = end_time - start_time\n",
+    "    # the time taken to complete question is designated as the time from when the second value is displayed, thus comencing \n",
+    "    # calculation till the particpant answers the question, it would be pointless to start the timer as soon as values are \n",
+    "    # displayed as that will add around 2 seconds to every particpants time that cannot be reduced.\n",
     "    time.sleep(1)\n",
     "    clear_output(wait=False)\n",
     "\n",
     "#2 number addition test\n",
     "def test1():\n",
     "    #randomises two number and add together to create answer)\n",
-    "    random_num1 = random.randint(1,100)\n",
+    "    random_num1 = random.randint(1,100)#number here can be varied to increase or increase difficulty\n",
     "    random_num2 = random.randint(1,100)\n",
     "    answer = random_num1 + random_num2\n",
     "    #Adds plus sign infront of interger\n",
@@ -127,7 +130,7 @@
     "\n",
     "#2 number multiplication test\n",
     "def test2():\n",
-    "    random_num1 = random.randint(2, 10)\n",
+    "    random_num1 = random.randint(2, 10)#kept at 10 to avoid too difficult questions\n",
     "    random_num2 = random.randint(2, 10)\n",
     "    answer = random_num1 * random_num2\n",
     "    #Adds x infront of interger\n",
@@ -151,7 +154,7 @@
     "#X x Y + Z\n",
     "def test4():\n",
     "    random_num1 = random.randint(2, 20)\n",
-    "    random_num2 = random.randint(2, 10)\n",
+    "    random_num2 = random.randint(2, 10)#same as two number multiplication do not increase max value too much\n",
     "    random_num3 = random.randint(1, 100)\n",
     "    answer = random_num1 * random_num2 + random_num3\n",
     "    input2 = \"x\" + str(random_num2)\n",
@@ -164,7 +167,7 @@
     "def test5():\n",
     "    random_num1 = random.randint(1, 50)\n",
     "    random_num2 = random.randint(1, 50)\n",
-    "    random_num3 = random.randint(2, 10)\n",
+    "    random_num3 = random.randint(2, 10)#setting max to 15 to increase difficult can be viable, going above would be pointless\n",
     "    input2 = \"{0:+}\".format(random_num2)\n",
     "    input3 = \"x\" + str(random_num3)\n",
     "    answer = (random_num1 + random_num2) * random_num3\n",
@@ -268,7 +271,7 @@
     "        time.sleep(2)\n",
     "\n",
     "    #result display\n",
-    "    ave_time = total_time/18\n",
+    "    ave_time = total_time/18#alter the denominater depending on how much questions there are\n",
     "    print(\"Your score is: \", score)\n",
     "    print(\"You took:  \", total_time, \"seconds to complete the test\")\n",
     "    print(\"On average you took:\", ave_time, \"to complete each question\")\n",
