--- a/Math_Test/Math Test.ipynb
+++ b/Math_Test/Math Test.ipynb
@@ -204,7 +204,7 @@
     "    clear_output(wait=False)\n",
     "    \n",
     "    #sex input\n",
-    "    html_out = HTML(f\"\"\"<span style='color: black; font-size: 50px'>What is your sex?</span>\"\"\")\n",
+    "    html_out = HTML(f\"\"\"<span style='color: black; font-size: 50px'>What is your biological sex? Input Male, Female or Other</span>\"\"\")\n",
     "    display(html_out)\n",
     "    usersex = input(\">\")\n",
     "    time.sleep(2)\n",
