--- a/Math_Test/Math Test.ipynb
+++ b/Math_Test/Math Test.ipynb
@@ -2,17 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "04d27774-69a6-4a8f-85cd-a9e2b5d72332",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your score is:  18\n",
-      "You took:   122.97216415405273 seconds to complete the test\n",
-      "On average you took: 6.831786897447374 to complete each question\n"
+     "data": {
+      "text/html": [
+       "<span style='color: black; font-size: 50px'>Welcome to the math ability test</span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 283\u001b[0m\n\u001b[1;32m    280\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    281\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo problem we hope you enjoyed the test.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 283\u001b[0m \u001b[43mruntest\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[1], line 175\u001b[0m, in \u001b[0;36mruntest\u001b[0;34m()\u001b[0m\n\u001b[1;32m    173\u001b[0m html_out \u001b[38;5;241m=\u001b[39m HTML(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124m<span style=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcolor: black; font-size: 50px\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m>Welcome to the math ability test</span>\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[1;32m    174\u001b[0m display(html_out)\n\u001b[0;32m--> 175\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    176\u001b[0m clear_output(wait\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m    178\u001b[0m \u001b[38;5;66;03m#name input\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -130,8 +145,8 @@
     "\n",
     "#2 number multiplication test\n",
     "def test2():\n",
-    "    random_num1 = random.randint(2, 10)#kept at 10 to avoid too difficult questions\n",
-    "    random_num2 = random.randint(2, 10)\n",
+    "    random_num1 = random.randint(2, 15)#Increase to 15 for difficulty\n",
+    "    random_num2 = random.randint(2, 15)\n",
     "    answer = random_num1 * random_num2\n",
     "    #Adds x infront of interger\n",
     "    input2 = \"x\" + str(random_num2)\n",
@@ -154,7 +169,7 @@
     "#X x Y + Z\n",
     "def test4():\n",
     "    random_num1 = random.randint(2, 20)\n",
-    "    random_num2 = random.randint(2, 10)#same as two number multiplication do not increase max value too much\n",
+    "    random_num2 = random.randint(2, 15)#same as two number multiplication do not increase max value too much\n",
     "    random_num3 = random.randint(1, 100)\n",
     "    answer = random_num1 * random_num2 + random_num3\n",
     "    input2 = \"x\" + str(random_num2)\n",
@@ -167,12 +182,11 @@
     "def test5():\n",
     "    random_num1 = random.randint(1, 50)\n",
     "    random_num2 = random.randint(1, 50)\n",
-    "    random_num3 = random.randint(2, 10)#setting max to 15 to increase difficult can be viable, going above would be pointless\n",
+    "    random_num3 = random.randint(2, 15)#setting max to 15 to increase difficult can be viable, going above would be pointless\n",
     "    input2 = \"{0:+}\".format(random_num2)\n",
     "    input3 = \"x\" + str(random_num3)\n",
     "    answer = (random_num1 + random_num2) * random_num3\n",
     "    df3val(random_num1, input2, input3)\n",
-    "    print(answer)\n",
     "    question(answer)\n",
     "    return\n",
     "\n",
@@ -185,7 +199,6 @@
     "    input3 = \"x\" + str(random_num3)\n",
     "    answer = (random_num1 * random_num2 * random_num3)\n",
     "    df3val(random_num1, input2, input3)\n",
-    "    print(answer)\n",
     "    question(answer)\n",
     "    return\n",
     "\n",
@@ -211,7 +224,7 @@
     "    clear_output(wait=False)\n",
     "    \n",
     "    #arbritary stuff\n",
-    "    html_out = HTML(f\"\"\"<span style='color: black; font-size: 50px'>Your test will include 6 parts with 3 questions each</span>\"\"\")\n",
+    "    html_out = HTML(f\"\"\"<span style='color: black; font-size: 50px'>Your test will include 6 parts with 5 questions each</span>\"\"\")\n",
     "    display(html_out)\n",
     "    time.sleep(2)\n",
     "    clear_output(wait=False)\n",
@@ -225,7 +238,7 @@
     "    clear_output(wait=False)\n",
     "\n",
     "    #start of test\n",
-    "    for i in range (3):\n",
+    "    for i in range (5):\n",
     "        test1()\n",
     "        total_time += time_taken #updates total_time from time_taken\n",
     "        time.sleep(2)\n",
@@ -233,7 +246,7 @@
     "    display(html_out)\n",
     "    time.sleep(2)\n",
     "    clear_output(wait=False)\n",
-    "    for i in range (3):\n",
+    "    for i in range (5):\n",
     "        test2()\n",
     "        total_time += time_taken\n",
     "        time.sleep(2)\n",
@@ -241,7 +254,7 @@
     "    display(html_out)\n",
     "    time.sleep(2)\n",
     "    clear_output(wait=False)\n",
-    "    for i in range (3):\n",
+    "    for i in range (5):\n",
     "        test3()\n",
     "        total_time += time_taken\n",
     "        time.sleep(2)\n",
@@ -249,7 +262,7 @@
     "    display(html_out)\n",
     "    time.sleep(2)\n",
     "    clear_output(wait=False)\n",
-    "    for i in range (3):\n",
+    "    for i in range (5):\n",
     "        test4()\n",
     "        total_time += time_taken\n",
     "        time.sleep(2)\n",
@@ -257,7 +270,7 @@
     "    display(html_out)\n",
     "    time.sleep(2)\n",
     "    clear_output(wait=False)\n",
-    "    for i in range (3):\n",
+    "    for i in range (5):\n",
     "        test5()\n",
     "        total_time += time_taken\n",
     "        time.sleep(2)\n",
@@ -265,13 +278,13 @@
     "    display(html_out)\n",
     "    time.sleep(2)\n",
     "    clear_output(wait=False)\n",
-    "    for i in range (3):\n",
+    "    for i in range (5):\n",
     "        test6()\n",
     "        total_time += time_taken\n",
     "        time.sleep(2)\n",
     "\n",
     "    #result display\n",
-    "    ave_time = total_time/18#alter the denominater depending on how much questions there are\n",
+    "    ave_time = total_time/24#alter the denominater depending on how much questions there are\n",
     "    print(\"Your score is: \", score)\n",
     "    print(\"You took:  \", total_time, \"seconds to complete the test\")\n",
     "    print(\"On average you took:\", ave_time, \"to complete each question\")\n",
