--- a/Math_Test/Math Test.ipynb
+++ b/Math_Test/Math Test.ipynb
@@ -210,7 +210,7 @@
     "    clear_output(wait=False)\n",
     " \n",
     "    #name input\n",
-    "    html_out = HTML(f\"\"\"<span style='color: black; font-size: 50px'>What is your name?</span>\"\"\")\n",
+    "    html_out = HTML(f\"\"\"<span style='color: black; font-size: 50px'>What is your ID?</span>\"\"\")\n",
     "    display(html_out)\n",
     "    username = input(\">\")\n",
     "    time.sleep(2)\n",
