--- a/Math_Test/Math Test.ipynb
+++ b/Math_Test/Math Test.ipynb
@@ -219,7 +219,7 @@
     "    #sex input\n",
     "    html_out = HTML(f\"\"\"<span style='color: black; font-size: 50px'>What is your biological sex? Input Male, Female or Other</span>\"\"\")\n",
     "    display(html_out)\n",
-    "    usersex = input(\">\")\n",
+    "    usex = input(\">\")\n",
     "    time.sleep(2)\n",
     "    clear_output(wait=False)\n",
     "    \n",
@@ -292,7 +292,7 @@
     "    #send data to form\"\n",
     "    data_dict = {\n",
     "    'name': username,\n",
-    "    'sex': usersex,\n",
+    "    'usersex': usex,\n",
     "    'playerscore': score,\n",
     "    'averagetime': ave_time\n",
     "    }\n",
