--- a/Math_Test/Math Test.ipynb
+++ b/Math_Test/Math Test.ipynb
@@ -7,27 +7,34 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<span style='color: black; font-size: 50px'>Welcome to the math ability test</span>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your score is:  27\n",
+      "You took:   211.06834197044373 seconds to complete the test\n",
+      "On average you took: 8.794514248768488 to complete each question\n",
+      "Please read:\n",
+      "\n",
+      "we wish to record your response data\n",
+      "to an anonymised public data repository. \n",
+      "Your data will be used for educational teaching purposes\n",
+      "practising data analysis and visualisation.\n",
+      "\n",
+      "Please type   yes   in the box below if you consent to the upload.\n"
+     ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 283\u001b[0m\n\u001b[1;32m    280\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    281\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo problem we hope you enjoyed the test.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 283\u001b[0m \u001b[43mruntest\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[1], line 175\u001b[0m, in \u001b[0;36mruntest\u001b[0;34m()\u001b[0m\n\u001b[1;32m    173\u001b[0m html_out \u001b[38;5;241m=\u001b[39m HTML(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124m<span style=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcolor: black; font-size: 50px\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m>Welcome to the math ability test</span>\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[1;32m    174\u001b[0m display(html_out)\n\u001b[0;32m--> 175\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    176\u001b[0m clear_output(wait\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m    178\u001b[0m \u001b[38;5;66;03m#name input\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thanks - your data will be uploaded.\n"
      ]
     }
    ],
@@ -210,7 +217,7 @@
     "    clear_output(wait=False)\n",
     " \n",
     "    #name input\n",
-    "    html_out = HTML(f\"\"\"<span style='color: black; font-size: 50px'>What is your ID?</span>\"\"\")\n",
+    "    html_out = HTML(f\"\"\"<span style='color: black; font-size: 50px'>What is your name?</span>\"\"\")\n",
     "    display(html_out)\n",
     "    username = input(\">\")\n",
     "    time.sleep(2)\n",
